examples/test/testpolicy1285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1285
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key26: value47
      key12: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value43
          key2: value45
      podSelector:
        matchLabels:
          key6: value20
